@@ -21,10 +21,11 @@
  * deduced empirically */
 #define TRES_RATIO 0.93
 
+extern double RN[NUM_TRI_TYPES];
 extern double LAMBDA[NUM_TRI_TYPES];
 extern double MI[NUM_TRI_TYPES];
 
 void main_search(seq_t dna, intv_t *chunk, t_params *params, t_penalization *pen, int pbw);
-int get_min_score(double pvalue, int type);
+int get_min_score(double pvalue, int type, int seq_len);
 
 #endif // SEARCH_H
